lexer/src/snapshots/lexer__tests__lex_get_url.snap
---
source: lexer/src/lib.rs
description: "get http://localhost"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    Get("get") at 0:0,
    Url("http://localhost") at 0:4,
]
