lexer/src/snapshots/lexer__tests__lex_get_url_over_many_lines.snap
---
source: lexer/src/lib.rs
description: "get\nhttp://localhost"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    Get("get") at 0:0,
    Url("http://localhost") at 1:0,
]
