lexer/src/snapshots/lexer__tests__lex_string_literals-2.snap
---
source: lexer/src/lib.rs
description: "\"hello"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    UnfinishedStringLiteral("\"hello") at 0:0,
]
