lexer/src/snapshots/lexer__tests__lex_string_literals-3.snap
---
source: lexer/src/lib.rs
description: "\n\"hello\n\"world\n"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    UnfinishedStringLiteral("\n\"hello") at 1:0,
    UnfinishedStringLiteral("\n\"hello\n\"world") at 2:0,
]
