lexer/src/snapshots/lexer__tests__lex_string_literals-4.snap
---
source: lexer/src/lib.rs
description: " \"\" \"\" ``"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    StringLiteral("") at 0:1,
    StringLiteral("") at 0:4,
    StringLiteral("") at 0:7,
]
