lexer/src/snapshots/lexer__tests__lex_string_literals-5.snap
---
source: lexer/src/lib.rs
description: " { \"Bearer token\" } "
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    LBracket("{") at 0:1,
    StringLiteral("\"Bearer token\"") at 0:3,
    RBracket("}") at 0:18,
]
