lexer/src/snapshots/lexer__tests__lex_string_literals-6.snap
---
source: lexer/src/lib.rs
description: "`\n{\n    stuff\n}`\n\n`\nstuff"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    MultiLineStringLiteral("`\n{\n    stuff\n}`") at 0:0,
    UnfinishedMultiLineStringLiteral("`\nstuff") at 5:0,
]
