lexer/src/snapshots/lexer__tests__lex_string_literals.snap
---
source: lexer/src/lib.rs
description: "\"hello\""
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    StringLiteral("\"hello\"") at 0:0,
]
