lexer/src/snapshots/lexer__tests__lex_template_literals-2.snap
---
source: lexer/src/lib.rs
description: "`a${\"temp\"}` }}"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    MultiLineStringLiteral("`a") at 0:0,
    DollarSignLBracket("${") at 0:2,
    StringLiteral("\"temp\"") at 0:4,
    RBracket("}") at 0:13,
]
